fix: .wp-caption vs. .aligncenter (issue #23)

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,18 +1,33 @@
 /* LAYOUT */
 /* ----------------------------------------- */
 
-// Presentational classes generated by WordPress 
-.aligncenter  { display: block; margin: 0 auto; }
-.alignleft    { float: left; margin: 0 20px 20px 0; }
-.alignright   { float: right; margin: 0 0 20px 20px; }
-.wp-caption   { border: 1px solid #999; text-align: center; background: #eee; padding: 10px; margin: 10px; }
+// Presentational classes generated by WordPress
+.wp-caption {
+  border: 1px solid #999;
+  text-align: center;
+  background: #eee;
+  padding: 10px;
+  margin: 10px;
+}
+.wp-block-image figcaption,
 .wp-caption-text {
-  // should this be in "plugins"?
-  // and/or do a SMACSS re-factor and put it in modules?
   @extend %sans-serif !optional;
   font-size: 0.66em;
   margin-bottom: 0.66em;
 }
+.aligncenter {
+  display: block;
+  margin: 0 auto 20px;
+}
+.alignleft {
+  float: left;
+  margin: 0 20px 20px 0;
+}
+.alignright {
+  float: right;
+  margin: 0 0 20px 20px;
+}
+
 
 // pseudo grid units - aping @see 960.gs
 $_960_base: 960px;
